--- a/assets/css/dna.css
+++ b/assets/css/dna.css
@@ -1,18 +1,4 @@
-.loader {
-	position: relative;
-	display: flex;
-	padding-top: 50px;
-	padding-left: 100px;
-	justify-content: center;
-	align-content: center;
-	width: 100px;
-	height: 300px;
-	/* width: 150px;
-	height: 200px; */
-	transform: rotate(45deg);
-	justify-content: center;
-	align-content: center;
-}
+
 
 .dot {
 	position: relative;
@@ -169,6 +155,64 @@
 	 50% { height: 15px }
 	 75% { height:  8px }
 	100% { height: 15px }
+}
+
+/* *, *:before, *:after {box-sizing: border-box;} */
+.computer-container {
+	position: absolute;
+}
+.computer-monitor {
+	position: relative;
+	height: 245px;
+	width: 373px;
+	background-color: #37474F;
+	border: 15px solid #546E7A;
+	border-top-right-radius: 2rem;
+	border-top-left-radius: 2rem;
+}
+.computer-bottom {
+	position: relative;
+	z-index: 1;
+	box-shadow: 5px 5px 11px rgba(0,0,0,0.3);
+	margin: 0 auto;
+	border-bottom-right-radius: 2rem;
+	border-bottom-left-radius: 2rem;
+	width: 373px;
+	height: 20px;
+	background-color: #eeeeee;
+}
+.computer-stand {
+	box-shadow: 5px 5px 11px rgba(0,0,0,0.3);
+	position: relative;
+	z-index: 0;
+	margin: 0 auto;
+	height: 20px;
+	width: 40px;
+	background-color: #eeeeee;
+	clip-path: polygon(5% 0%, 95% 0%, 100% 100%, 0% 100%);
+}
+.computer-stand-bottom {
+	box-shadow: 5px 5px 11px rgba(0,0,0,0.3);
+	margin: 0 auto;
+	height: 10px;
+	width: 100px;
+	background-color: #eeeeee;
+	border-top-right-radius: 2rem;
+	border-top-left-radius: 2rem;
+	position: relative;
+
+}
+
+.loader {
+	position: absolute;
+	display: flex;
+	z-index: 3;
+	margin: 0 auto;
+	/* width: 100px;
+	height: 300px; */
+	/* width: 150px;
+	height: 200px; */
+	transform: rotate(45deg) scale(0.7);
 }
 /* 
 html, body {
