--- a/assets/css/dna.css
+++ b/assets/css/dna.css
@@ -165,8 +165,11 @@
 	position: relative;
 	height: 245px;
 	width: 373px;
-	background-color: #37474F;
-	border: 15px solid #546E7A;
+	box-shadow: 5px 10px 10px 5px rgba(0,0,0,0.3);
+	/* background-color: #37474F;
+	border: 15px solid #546E7A; */
+	background-color: var(--global-computer-inner-color);
+	border: 15px solid var(	--global-computer-outer-color);
 	border-top-right-radius: 2rem;
 	border-top-left-radius: 2rem;
 }
