--- a/assets/css/dna.css
+++ b/assets/css/dna.css
@@ -164,15 +164,17 @@
 
 .computer-monitor {
 	position: relative;
-	height: 245px;
-	width: 373px;
+	/* height: 245px;
+	width: 373px; */
+	height: 200px;
+	width: 300px;
 	box-shadow: 0px 0px, 20px rgba(0,0,0,1);
 	/* background-color: #37474F;
 	border: 15px solid #546E7A; */
 	background-color: var(--global-computer-inner-color);
-	border: 15px solid var(	--global-computer-outer-color);
-	border-top-right-radius: 2rem;
-	border-top-left-radius: 2rem;
+	border: 12px solid var(	--global-computer-outer-color);
+	border-top-right-radius: 1.5rem;
+	border-top-left-radius: 1.5rem;
 }
 
 
@@ -190,7 +192,7 @@
 	margin: 0 auto;
 	border-bottom-right-radius: 2rem;
 	border-bottom-left-radius: 2rem;
-	width: 373px;
+	width: 300px;
 	height: 20px;
 	background-color: #eeeeee;
 }
@@ -219,16 +221,23 @@
 
 }
 
-.loader {
+.dna-container{
 	position: absolute;
+	top: 0;
+	left: 0;
+	height:100%;
+	width:100%;
+}
+
+.loader {
+	/* transform: rotate(45deg) scale(0.7); */
+	transform:scale(0.7) rotate(45deg);
+	height: 100%;
+	position: relative;
 	display: flex;
 	z-index: 3;
-	margin: 0 auto;
-	/* width: 100px;
-	height: 300px; */
-	/* width: 150px;
-	height: 200px; */
-	transform: rotate(45deg) scale(0.7);
+	top: 20%;
+	right:13%;
 }
 /* 
 html, body {
